--- a/Lec_4.1(form).html
+++ b/Lec_4.1(form).html
@@ -91,8 +91,32 @@
             <input type="submit"><input type="reset"><br><br>
             </fieldset>
       </form><br>
+      <form action="#" method="get"><fieldset><legend>Registration Form 1.8</legend>
+            Name : <input type="text" name="uname" placeholder="Enter user name" required maxlength="10"><br><br>
+            Email : <input type="email" name="eid"><br/><br>
+            Password : <input type="password" name="input" maxlength="16" minlength="6"><br><br>
+            Number 1 : <input type="number" name="number" min="0" max="100" step="5"><br><br>
+            Number 2 : <input type="tel" name="phone" maxlength="10" minlength="10"><br><br>
+            Birth Date : <input type="date" name="DOB"><br><br>
+            Select Color : <input type="color" name="color"><br><br>
+            <input type="range" name="range" min="1" max="100"><br><br>
+            SearchBar : <input type="search"><br><br>
+            Attach Files <input type="file" accept=".jpg,.png" multiple><br><br>
+            Select your browser : <input list="browsers" name="browser"><br><br>
+            <datalist id="browsers">
+                  <option value="Firefox">
+                  <option value="Chrome">
+                  <option value="Opera">
+            </datalist>
+            <input type="text" value="hide" hidden>It is hidden<br><br>
+            <input type="text" value="readonly" readonly>It is readonly<br><br>
+            <input type="text" value="disabled" disabled>It is disabled<br><br>
+            <input type="submit"><input type="reset"><br><br>
+            </fieldset>
+      </form><br>
       
 </body>
 
 </html>
+
 
