--- a/Lec_4(form).html
+++ b/Lec_4(form).html
@@ -117,8 +117,10 @@
             <input type="text" value="readonly" readonly>It is readonly<br><br>
             <input type="text" value="disabled" disabled>It is disabled<br><br>
             <input type="submit"><input type="reset"><br><br>
+            <label>Username</label><input type="text"><br><br>
+            <label>Username<input type="text"></label><br><br>
+            Address : <textarea rows="10", cols="30"></textarea><br><br>
             </fieldset>
       </form><br>
-
 </body>
 </html>
