--- a/Lec_4(form).html
+++ b/Lec_4(form).html
@@ -120,6 +120,7 @@
             <label>Username</label><input type="text"><br><br>
             <label>Username<input type="text"></label><br><br>
             Address : <textarea rows="10", cols="30"></textarea><br><br>
+            <input type="text" autofocus>Name<br><br>
             </fieldset>
       </form><br>
 </body>
