--- a/CH 4/lec1.8.html
+++ b/CH 4/lec1.8.html
@@ -2,7 +2,7 @@
 TYPES OF SELECTORS
 
 2. ID selector
--> targets unique elements; never starts with a number
+-> targets unique elements; # never starts with a number
 -->
 
 <!DOCTYPE html>
@@ -22,4 +22,5 @@ TYPES OF SELECTORS
     <p id="a"> With id selector</p>
     <h1>Heading 1</h1>
 </body>
+
 </html>
